--- a/GeoCache1.ipynb
+++ b/GeoCache1.ipynb
@@ -224,7 +224,7 @@
     "n = 1000\n",
     "a= 1\n",
     "summult=0 \n",
-    "while a<= n:\n",
+    "while a< n:\n",
     "    if not(a%3):\n",
     "        summult = summult + a \n",
     "    elif not(a%5): # only include this mult of 5 if it has not already trigged a loop – “elif” or “else if”\n",
