spotted another inequality

--- a/GeoCache1.ipynb
+++ b/GeoCache1.ipynb
@@ -190,7 +190,7 @@
     "n = 1000\n",
     "a= 1 #start checking numbers at 1\n",
     "summult=0 #the sum of multiples starts at zero\n",
-    "while a<= n: # check up to value of $n$\n",
+    "while a< n: # check up to value of $n$\n",
     "    if not(a%3): # this “if” statement will only be executed when a is a multiple of 3\n",
     "        summult = summult + a # add on a to whatever the sum of the multiples already is\n",
     "    a = a + 1 # add one onto a to check the next number\n",
